mod: ヘッダーデザイン修正

--- a/src/global.scss
+++ b/src/global.scss
@@ -5,7 +5,11 @@
   --primary-color: #182d7d;
   --secondary-color: #6c6c6c;
   --primary-color-transparent: rgba(24, 45, 125, 0.9);
-  --black-transparent: rgba(0, 0, 0, 0.5);
+  --black-transparent: rgba(0, 0, 0, 0.3);
+  --light-gray: #eff2f4;
+  --light-gray-transparent: rgba(239, 242, 244, 0.9);
+  --dark-gray: #3d464e;
+  --dark-gray-transparent: rgba(61, 70, 78, 0.9);
 }
 
 body {
