--- a/src/global.scss
+++ b/src/global.scss
@@ -3,13 +3,14 @@
 
 :root {
   --primary-color: #182d7d;
-  --secondary-color: #6c6c6c;
   --primary-color-transparent: rgba(24, 45, 125, 0.9);
-  --black-transparent: rgba(0, 0, 0, 0.3);
+  --secondary-color: #e1cc6d;
+  --secondary-color-transparent: rgba(225, 204, 109, 0.9);
   --light-gray: #eff2f4;
   --light-gray-transparent: rgba(239, 242, 244, 0.9);
   --dark-gray: #3d464e;
   --dark-gray-transparent: rgba(61, 70, 78, 0.9);
+  --black-transparent: rgba(0, 0, 0, 0.3);
 }
 
 body {
