--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -47,9 +47,19 @@ $breakpoint: (
   line-height: 28px;
 }
 
+@mixin font22 {
+  font-size: 22px;
+  line-height: 30px;
+}
+
 @mixin font24 {
   font-size: 24px;
   line-height: 40px;
+}
+
+@mixin font32 {
+  font-size: 32px;
+  line-height: 64px;
 }
 
 @mixin font12Bold {
@@ -88,9 +98,21 @@ $breakpoint: (
   font-weight: bold;
 }
 
+@mixin font22Bold {
+  font-size: 22px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
 @mixin font24Bold {
   font-size: 24px;
   line-height: 30px;
+  font-weight: bold;
+}
+
+@mixin font32Bold {
+  font-size: 32px;
+  line-height: 64px;
   font-weight: bold;
 }
 
