add&mod: ニュースコンポーネントの用意、ヘッダー調整

--- a/src/global.scss
+++ b/src/global.scss
@@ -4,8 +4,10 @@
 :root {
   --primary-color: #182d7d;
   --primary-color-transparent: rgba(24, 45, 125, 0.9);
-  --secondary-color: #e1cc6d;
-  --secondary-color-transparent: rgba(225, 204, 109, 0.9);
+  --secondary-color: #dbdfff;
+  --secondary-color-transparent: rgba(219, 223, 255, 0.9);
+  --accent-color: #e1cc6d;
+  --accent-color-transparent: rgba(225, 204, 109, 0.9);
   --light-gray: #eff2f4;
   --light-gray-transparent: rgba(239, 242, 244, 0.9);
   --dark-gray: #3d464e;
