--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -3,6 +3,7 @@ $breakpoint: (
   sp: 'screen and (max-width: 767px)',
   tab: 'screen and (min-width: 768px)',
   pc: 'screen and (min-width: 1025px)',
+  full_header: 'screen and (max-width: 1072px)',
 );
 
 @mixin mq($bp) {
