add&mod: テンプレートの用意、アクセスページに情報の追加とMap表示、ニュースの表示修正

--- a/src/global.scss
+++ b/src/global.scss
@@ -5,7 +5,8 @@
   --primary-color: #182d7d;
   --primary-color-transparent: rgba(24, 45, 125, 0.9);
   --secondary-color: #dbdfff;
-  --secondary-color-transparent: rgba(219, 223, 255, 0.9);
+  --secondary-color-transparent: rgba(219, 223, 255, 0.8);
+  --third-color: #ccd0ee;
   --accent-color: #e1cc6d;
   --accent-color-transparent: rgba(225, 204, 109, 0.9);
   --light-gray: #eff2f4;
