add&mod: 定数化、インスタ遷移とQRコードの表示追加、一部SP版対応

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -5,6 +5,8 @@ $breakpoint: (
   pc: 'screen and (min-width: 1025px)',
   short_header: 'screen and (max-width: 1072px)',
   small_access_info: 'screen and (max-width: 1370px)',
+  small_store_info: 'screen and (max-width: 946px)',
+  word_break: 'screen and (max-width: 523px)',
 );
 
 @mixin mq($bp) {
