--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -5,8 +5,9 @@ $breakpoint: (
   pc: 'screen and (min-width: 1025px)',
   short_header: 'screen and (max-width: 1072px)',
   small_access_info: 'screen and (max-width: 1370px)',
-  small_store_info: 'screen and (max-width: 946px)',
-  word_break: 'screen and (max-width: 523px)',
+  small_access_store_info: 'screen and (max-width: 1259px)',
+  small_top_store_info: 'screen and (max-width: 946px)',
+  small_top_store_info_word_break: 'screen and (max-width: 523px)',
 );
 
 @mixin mq($bp) {
