--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,7 @@
   --dark-gray: #3d464e;
   --dark-gray-transparent: rgba(61, 70, 78, 0.9);
   --black-transparent: rgba(0, 0, 0, 0.3);
+  --placeholder-color: #999999;
 }
 
 body {
